rke2/prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitower
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: monitower-auth-middleware@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: prometheus.wizardtower.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 80
  tls:
    - hosts:
        - prometheus.wizardtower.dev
      secretName: prometheus-tls
